OFTVotes.sol initialized

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.14.1"
+  },
+  "dependencies": {
+    "@layerzerolabs/solidity-examples": "^0.0.10",
+    "@openzeppelin/contracts": "^4.9.0"
   }
 }
